--- a/src/resources/views/frontend/profile/create_ticket_support.twig
+++ b/src/resources/views/frontend/profile/create_ticket_support.twig
@@ -15,22 +15,22 @@
                 <input type="text" name="title" class="form-control" id="title" placeholder="{{ __('Title') }}" required="">
             </div>
             <div class="form-group">
-                <label for="files">{{ __('Attachments') }}</label>
-                <input class="form-control" type="file" id="files" name="files[]" multiple>
-            </div>
-            <div class="form-group">
                 <label for="content">{{ __('Content') }}</label>
                 <textarea id="content" rows="9" style="width: 100%;" name="content" required=""></textarea>
             </div>
+            <div class="form-group">
+                <label for="files">{{ __('Attachments') }}</label>
+                <input class="form-control" type="file" id="files" name="files[]" multiple>
+            </div>
         </div>
     </div>
-    <button type="submit" class="btn btn-primary">{{ __('Submit') }}</button>
+    <button type="submit" class="btn btn-primary" data-loading-text="{{ __('Please wait...') }}">{{ __('Submit') }}</button>
 </form>
 
 <script>
     function ticket_support_success_handle(form, res) {
         if (res.status) {
-            window.location.href = "{{ url('profile/list-ticket-support') }}";
+            window.location.href = "{{ url('profile/ticket-supports') }}";
         }
     }
 </script>
