--- a/src/resources/views/frontend/profile/ticket_support/create.twig
+++ b/src/resources/views/frontend/profile/ticket_support/create.twig
@@ -1,5 +1,11 @@
-<form action="{{ url('ajax/ticket-support/submit') }}" method="post" class="form-ajax" data-success="ticket_support_success_handle" enctype="multipart/form-data">
-    <input type="hidden" name="_token" value="{{ csrf_token() }}">
+<form action="{{ url('ajax/ticket-support/submit') }}"
+      method="post"
+      class="form-ajax"
+      data-success="ticket_support_success_handle"
+      enctype="multipart/form-data"
+>
+    {{ csrf_field() }}
+
     <div class="row">
         <div class="col-md-12">
             <div class="form-group">
@@ -12,19 +18,26 @@
             </div>
             <div class="form-group">
                 <label for="title">{{ __('Title') }}</label>
-                <input type="text" name="title" class="form-control" id="title" placeholder="{{ __('Title') }}" required="">
+                <input type="text" name="title" class="form-control" id="title" placeholder="{{ __('Title') }}"
+                       required="">
             </div>
+
             <div class="form-group">
                 <label for="content">{{ __('Content') }}</label>
-                <textarea id="content" rows="9" style="width: 100%;" name="content" required=""></textarea>
+                <textarea id="content" class="form-control" rows="9" style="width: 100%;" name="content" required=""></textarea>
             </div>
+
             <div class="form-group">
                 <label for="files">{{ __('Attachments') }}</label>
                 <input class="form-control" type="file" id="files" name="files[]" multiple>
             </div>
         </div>
     </div>
-    <button type="submit" class="btn btn-primary" data-loading-text="{{ __('Please wait...') }}">{{ __('Submit') }}</button>
+    <button type="submit"
+            class="btn btn-primary"
+            data-loading-text="{{ __('Please wait...') }}">
+        {{ __('Submit') }}
+    </button>
 </form>
 
 <script>
