:+1: Support ticket profile

--- a/src/resources/views/frontend/profile/ticket_support/index.twig
+++ b/src/resources/views/frontend/profile/ticket_support/index.twig
@@ -1,133 +1,5 @@
 {% if input_get('id') %}
-    <div id="accordion" class="mb-3">
-        <div class="card">
-            <div class="card-header" id="headingOne">
-                <h5 class="mb-0">
-                    <button class="btn btn-link"
-                            data-toggle="collapse"
-                            data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        <i class="fa fa-pen"></i> {{ __('Reply') }}
-                    </button>
-                </h5>
-            </div>
-
-            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                <div class="card-body">
-                    <form action="{{ url('ajax/ticket-support/'~ticketSupport.id~'/comment') }}"
-                          method="post"
-                          class="form-ajax"
-                          data-success="ticket_support_success_handle"
-                          enctype="multipart/form-data"
-                    >
-
-                        {{ csrf_field() }}
-
-                        <div class="form-group">
-                            <label for="comment">{{ __('Comment') }}</label>
-                            <textarea class="form-control" id="comment" rows="9" name="content"
-                                      required="">{{ ticketSupport.comment }}</textarea>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="files">{{ __('Attachments') }}</label>
-                            <input class="form-control" type="file" id="files" name="files[]" multiple>
-                        </div>
-
-                        <button type="submit" class="btn btn-primary"
-                                data-loading-text="{{ __('Please wait...') }}">{{ __('Submit') }}</button>
-
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    {% for comment in ticketSupportComments %}
-        <div class="ticket-reply markdown-content card mb-3">
-            <div class="card-header row">
-                <div class="user col-md-9">
-                    <i class="fa fa-user"></i>
-                    <span class="name">
-                        {{ comment.created_by.name }}
-
-                        <span class="label requestor-type-owner badge badge-info">
-                            {% if ticketSupport.created_by.id == comment.created_by.id %}
-                                {{ __('Owner') }}
-                            {% else %}
-                                {{ __('Staff') }}
-                            {% endif %}
-                        </span>
-                    </span>
-                </div>
-
-                <div class="date col-md-3">
-                    {{ comment.created_at }}
-                </div>
-            </div>
-
-            <div class="card-body message">
-                {{ comment.content }}
-
-                {% if comment.attachments %}
-                <div class="row">
-                    <div class="col-md-12">
-                        <label>{{ __('Attachments') }}</label>
-                    </div>
-                    {% for attachment in comment.attachments %}
-                        <div class="col-md-3">
-                            <a href="{{ url('ajax/ticket-support/download-attachments')~'?ticket_support_id='~ticketSupport.id~'&attachment_id='~attachment.id }}"
-                               class="download-attachment"
-                            >{{ attachment.name }}</a>
-                        </div>
-                    {% endfor %}
-                </div>
-                {% endif %}
-            </div>
-        </div>
-    {% endfor %}
-
-    <div class="ticket-reply markdown-content card">
-        <div class="card-header row">
-            <div class="user col-md-9">
-                <i class="fa fa-user"></i>
-                <span class="name">
-                    {{ ticketSupport.created_by.name }}
-
-                    <span class="label requestor-type-owner badge badge-info">
-                        {{ __('Owner') }}
-                        </span>
-                    </span>
-
-                <div class="type">
-                    <b>{{ ticketSupport.created_by.email }}</b>
-                </div>
-            </div>
-            <div class="date col-md-3">
-                {{ ticketSupport.created_at }}
-            </div>
-        </div>
-
-        <div class="card-body message">
-            {{ ticketSupport.content }}
-
-            {% if ticketSupport.attachments %}
-                <hr>
-                <div class="row">
-                    <div class="col-md-12">
-                        <label>{{ __('Attachments') }}</label>
-                    </div>
-                    {% for attachment in ticketSupport.attachments %}
-                        <div class="col-md-3">
-                            <a href="{{ url('ajax/ticket-support/download-attachments')~'?ticket_support_id='~ticketSupport.id~'&attachment_id='~attachment.id }}"
-                               class="download-attachment"
-                            >{{ attachment.name }}</a>
-                        </div>
-                    {% endfor %}
-                </div>
-            {% endif %}
-        </div>
-    </div>
-
+    {% include 'jwts::frontend.profile.ticket_support.edit' %}
 {% else %}
     <div class="table-responsive mb-3">
         <div class="text-right">
